--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,21 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link href="%PUBLIC_URL%/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link
+      href="%PUBLIC_URL%/favicon.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
-    />
+    /><link
+    href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap"
+    rel="stylesheet"
+  />
 
-    
     <title>Les ravitailleurs</title>
   </head>
   <body>
@@ -26,5 +32,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=UA-162359879-1"
+    ></script>
+    <script type="text/javascript">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-162359879-1", { anonymize_ip: false });
+    </script>
   </body>
 </html>
