Default image og

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,24 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
-    /><link
-    href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap"
-    rel="stylesheet"
-  />
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>Les ravitailleurs</title>
+    <title>Les Ravitailleurs</title>
+    <meta property="og:title" content="Les Ravitailleurs" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Les plus démunis ont besoin, aujourd’hui plus que jamais, d’aide alimentaire."
+    />
+    <meta property="og:url" content="https://lesravitailleurs.org/" />
+    <meta
+      property="og:image"
+      content="https://lesravitailleurs.s3.eu-west-3.amazonaws.com/share_ravitailleurs.jpg"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
