Spreadsheet + new share image

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://lesravitailleurs.org/" />
     <meta
       property="og:image"
-      content="https://lesravitailleurs.s3.eu-west-3.amazonaws.com/share_ravitailleurs.jpg"
+      content="https://lesravitailleurs.s3.eu-west-3.amazonaws.com/ravitailleursShare.jpg"
     />
   </head>
   <body>
