--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,9 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Les plus démunis ont besoin, aujourd’hui plus que jamais, d’aide alimentaire."
+      content="Aidez-nous à cuisiner des milliers de repas pour les plus démunis. Des milliers de personnes, en France, ne peuvent plus se nourrir au quotidien. Vous pouvez aider."
     />
+    <meta name="description" content="Aidez-nous à cuisiner des milliers de repas pour les plus démunis. Des milliers de personnes, en France, ne peuvent plus se nourrir au quotidien. Vous pouvez aider." />
     <meta property="og:url" content="https://lesravitailleurs.org/" />
     <meta
       property="og:image"
