--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <title>Les Ravitailleurs</title>
     <meta property="og:title" content="Les Ravitailleurs" />
     <meta property="og:type" content="website" />
