--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,7 @@
         "https://d1ynm3a7sf.execute-api.eu-west-3.amazonaws.com/default/GetLandingData"
       ).then((r) => {
         r.json().then((j) => {
+          window.retraits = j.retraits && j.retraits.Item && j.retraits.Item.value;
           spreadsheetResults = j;
           updateContentIfReady();
         });
